@@ -3,6 +3,8 @@ version 1.9.5, in progress
 - "foreign" command: enable the --send-data option for Octave, in
   which case the gretl dataset is pre-loaded as a matrix named
   "gretldata"
+- "coint2" (Johansen test): print the log-likelihood
+- Fix a small memory leak when opening an *.asc data file
 
 2011-02-24 version 1.9.4
 - Change the default random number generator from GLib's 
